Added Card Class constructor

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="row justify-content-center">
                 <div class="col-8">
                     <div class="row align-items-center justify-content-center">
-                        <div class="col">
+                        <div class="col" id="computer-container">
                             <h1>Computer</h1>
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
@@ -157,11 +157,11 @@
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <div class="col-4">
+                        <div class="col-4" id="deck-container">
                             <h1>Deck</h1>
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         </div>
-                        <div class="col-8">
+                        <div class="col-8" id="board-container">
                             <h1>Board</h1>
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <div class="col">
+                        <div class="col" id="user-container">
                             <h1>User</h1>
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
