Updated initial fetch request to create new game

--- a/test.html
+++ b/test.html
@@ -148,21 +148,21 @@
                 <div class="col-8">
                     <div class="row align-items-center justify-content-center">
                         <div class="col" id="computer-container">
-                            <!-- <h1>Computer</h1>
+                            <h1>Computer</h1>
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png"> -->
+                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <div class="col-4" id="deck-container">
+                        <div class="col-4" id="deck-container player-ID">
                             <h1>Deck</h1>
-                            <!-- <img src="https://i.ibb.co/QJ2J9d2/cardback.png"> -->
+                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         </div>
                         <div class="col-8" id="board-container">
-                            <!-- <h1>Board</h1>
+                            <h1>Board</h1>
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
@@ -177,17 +177,17 @@
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png"> -->
+                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
                         <div class="col" id="user-container">
-                            <!-- <h1>User</h1>
+                            <h1>User</h1>
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
                             <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png"> -->
+                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         </div>
                     </div>
                 </div>
