Moved pairs to bottom of page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./css/styles.css">
         <title>Hello, world!</title>
     </head>
-    <body>
+    <body class="test">
         <nav class="navbar navbar-expand-lg navbar-light hidden bg-light" id="nav-bar">
             <a class="navbar-brand" href="#">화투</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,7 +142,7 @@
             
         </div>
 
-        <div class="container-fluid hidden" id="main-game">
+        <div class="container-fluid hidden h-100" id="main-game">
             <!-- Row 1 (Computer) -->
             <div class="row justify-content-center">
                 <div class="col-8">
@@ -158,7 +158,6 @@
                     </div>
                     <div class="row align-items-center justify-content-center">
                         <div class="col-4" id="deck-container">
-                            <h1>Deck</h1>
                             <!-- <img src="https://i.ibb.co/QJ2J9d2/cardback.png"> -->
                         </div>
                         <div class="col-8" id="board-container">
@@ -191,87 +190,87 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 pairs">
-                        <div class="paired-top paired">
-                            <h3>Computer Pairs</h3>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                        </div>
-                        <div class="paired-bottom paired">
-                            <h3>User Pairs</h3>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                            <div class="jan matched"> 
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                                <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            </div>
-                        </div>
-                </div>
             </div>
+            <div class="row pairs">
+                <div class="col paired">
+                    <h3>Computer Pairs</h3>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                </div>
+                <div class="col paired">
+                    <h3>User Pairs</h3>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                    <div class="jan matched"> 
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
+                    </div>
+                </div>
+        </div>
         </div>
 
 
