Added create card summary

--- a/index.html
+++ b/index.html
@@ -52,46 +52,46 @@
                   <div class="dropdown-menu text-wrap" aria-labelledby="navbarDropdown">
                       <button class="dropdown-item disabled" type="button">
                         <div class="row">
-                          <div class='col january'>
+                          <div class='col' id='january'>
                             <p>January</p>
                           </div>
-                          <div class='col february'>
+                          <div class='col' id='february'>
                             <p>February</p>
                           </div>
-                          <div class='col march'>
+                          <div class='col' id='march'>
                             <p>March</p>
                           </div>
                         </div>
                         <div class="row">
-                          <div class='col april'>
+                          <div class='col' id='april'>
                             <p>April</p>
                           </div>
-                          <div class='col may'>
+                          <div class='col' id='may'>
                             <p>May</p>
                           </div>
-                          <div class='col june'>
+                          <div class='col' id='june'>
                             <p>June</p>
                           </div>
                         </div>
                         <div class="row">
-                          <div class='col july'>
+                          <div class='col' id='july'>
                             <p>July</p>
                           </div>
-                          <div class='col august'>
+                          <div class='col' id='august'>
                             <p>August</p>
                           </div>
-                          <div class='col september'>
+                          <div class='col' id='september'>
                             <p>September</p>
                           </div>
                         </div>
                         <div class="row">
-                          <div class='col october'>
+                          <div class='col' id='october'>
                             <p>October</p>
                           </div>
-                          <div class='col november'>
+                          <div class='col' id='november'>
                             <p>November</p>
                           </div>
-                          <div class='col december'>
+                          <div class='col' id='december'>
                             <p>December</p>
                           </div>
                         </div>
@@ -143,50 +143,24 @@
         </div>
 
         <div class="container-fluid hidden h-100" id="main-game">
-            <!-- Row 1 (Computer) -->
             <div class="row justify-content-center">
                 <div class="col-8">
                     <div class="row align-items-center justify-content-center">
                         <div class="col" id="computer-container">
-                            <!-- <h1>Computer</h1>
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png"> -->
+
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
                         <div class="col-4" id="deck-container">
-                            <!-- <img src="https://i.ibb.co/QJ2J9d2/cardback.png"> -->
+
                         </div>
                         <div class="col-8" id="board-container">
-                            <!-- <h1>Board</h1>
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png"> -->
+        
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
                         <div class="col" id="user-container">
-                            <!-- <h1>User</h1>
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                            <img src="https://i.ibb.co/jGbHTjT/crane.png"> -->
+                           
                         </div>
                     </div>
                 </div>
