Added game model

--- a/index.html
+++ b/index.html
@@ -218,51 +218,9 @@
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
                     </div>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
                 </div>
                 <div class="col paired">
                     <h3>User Pairs</h3>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
                     <div class="jan matched"> 
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
@@ -295,6 +253,7 @@
     <script type="text/javascript" src="services/API.js"></script>
     <script type="text/javascript" src="models/player.js"></script>
     <script type="text/javascript" src="models/card.js"></script>
+    <script type="text/javascript" src="models/game.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
