Reorganized API class

--- a/index.html
+++ b/index.html
@@ -189,11 +189,14 @@
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <div class="col-4" id="deck-container">
+                        <div class="col-2" id="deck-container">
 
                         </div>
-                        <div class="col-8" id="board-container">
+                        <div class="col-7" id="board-container">
         
+                        </div>
+                        <div class="col-3" id="played-container">
+                            <img src="https://www.maxlaumeister.com/lfs/hanafuda/47.jpg">
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
