Rendered game username to page

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </div>
                 </div>
                 <div class="col paired">
-                    <h3>User Pairs</h3>
+                    <h3 id="player-pairs">User Pairs</h3>
                     <div class="jan matched"> 
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
