Updated game username attribute to name

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <button type="submit" class="btn btn-primary mb-2">Submit</button>
                           </div>
                         </div>
-                      </form>
+                    </form>
                 </div>
              </div>
             
@@ -186,6 +186,8 @@
                     <div class="row align-items-center justify-content-center">
                         <div class="col" id="computer-container">
 
+                        </div>
+                        <div class="col-3">
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
@@ -202,6 +204,8 @@
                     <div class="row align-items-center justify-content-center">
                         <div class="col" id="user-container">
                            
+                        </div>
+                        <div class="col-3">
                         </div>
                     </div>
                 </div>
