Updated moveCardToBoard method

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         
                         </div>
                         <div class="col-3" id="played-container">
-                            <img src="https://www.maxlaumeister.com/lfs/hanafuda/47.jpg">
+                            
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center">
@@ -226,7 +226,7 @@
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
                     </div>
                 </div>
-                <div class="col paired">
+                <div class="col paired" id="user-pairs">
                     <h3 id="player-pairs">User Pairs</h3>
                     <div class="jan matched"> 
                         <img src="https://i.ibb.co/jGbHTjT/crane.png">
