Implemented card flip

--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
                         <div class="col" id="user-container">
                            
                         </div>
-                        <div class="col-3">
+                        <div class="col-3" id="instruction-display">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row pairs">
-                <div class="col paired">
+                <div class="col paired" id="computer-pairs">
                     <h3>Computer Pairs</h3>
                     <div class="jan matched"> 
                        
