Added play again and exit buttons

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <div class="row h-100">
                 <div class="col-sm-12 my-auto">
                     <h3 id="game-winner">You Won!</h3>
-                    <button type="submit" class="btn btn-primary mb-2">Play Again?</button>
-                    <button type="submit" class="btn btn-primary mb-2">Exit</button>
+                    <button type="submit" id="play-again" class="btn btn-primary mb-2">Play Again?</button>
+                    <button type="submit" id="exit" class="btn btn-primary mb-2">Exit</button>
                 </div>
             </div>
         </div>
