Added event listeners to buttons at end game

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </nav>
         
-        <div class="container-fluid hidden" id="welcome">
+        <div class="container-fluid" id="welcome">
             <div class="row h-100">
                 <div class="col-sm-12 my-auto">
                     <h3>Please enter you name</h3>
@@ -180,7 +180,7 @@
             
         </div>
 
-        <div class="container-fluid" id="winner">
+        <div class="container-fluid hidden" id="winner">
             <div class="row h-100">
                 <div class="col-sm-12 my-auto">
                     <h3 id="game-winner">You Won!</h3>
