Fixed reset game mechanic

--- a/index.html
+++ b/index.html
@@ -223,33 +223,10 @@
             <div class="row pairs">
                 <div class="col paired" id="computer-pairs">
                     <h3>Computer Pairs</h3>
-                    <!-- <div class="jan matched"> 
-                       
-                    </div>
-                    <div class="jan matched"> 
-                       
-                    </div> -->
+
                 </div>
                 <div class="col paired" id="user-pairs">
-                    <h3 id="player-pairs">User Pairs</h3>
-                    <!-- <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
-                    <div class="jan matched"> 
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                    </div>
-                    <div class="jan matched">  -->
-                        <!-- <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png">
-                        <img src="https://i.ibb.co/jGbHTjT/crane.png"> -->
-                    </div>
+                    <h3 id="player-pairs"></h3>
                 </div>
         </div>
         </div>
