Made dealCards fulfill promise before moving forward

--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
                         <div class="col" id="computer-container">
 
                         </div>
-                        <div class="col-3">
+                        <div class="col-2">
                         </div>
                     </div>
-                    <div class="row align-items-center justify-content-center maintain-height">
-                        <div class="col-2" id="deck-container">
+                    <div class="row align-items-center justify-content-center maintain-height" id="board">
+                        <div class="col-3" id="played-container">
 
                         </div>
                         <div class="col-7" id="board-container">
         
                         </div>
-                        <div class="col-3" id="played-container">
+                        <div class="col-2" id="deck-container">
 
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                         <div class="col" id="user-container">
                            
                         </div>
-                        <div class="col-3" id="instruction-display">
+                        <div class="col-2" id="instruction-display">
                         </div>
                     </div>
                 </div>
