--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         
         <div class="container-fluid" id="welcome">
             <div class="row h-100">
-                <div class="col-sm-12 my-auto">
+                <div class="col-sm-12 my-auto animated fadeInUp">
                     <h3>Please enter you name</h3>
                     <form id='form'>
                         <div class="form-row align-items-center">
