--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/styles.css">
-        <title>Hello, world!</title>
+        <title>Play Hwatu</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light hidden bg-light" id="nav-bar">
@@ -161,7 +161,7 @@
         </nav>
         
         <div class="container-fluid" id="welcome">
-            <div class="row h-100">
+            <div class="row h-100 hidden" id="welcome-div">
                 <div class="col-sm-12 my-auto animated fadeInUp">
                     <h3>Please enter you name</h3>
                     <form id='form'>
@@ -222,7 +222,7 @@
             </div>
             <div class="row pairs">
                 <div class="col paired" id="computer-pairs">
-                    <h3>Computer Pairs</h3>
+                    <h3>Opponent's Sets</h3>
 
                 </div>
                 <div class="col paired" id="user-pairs">
