Added point display at end game

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <div class="container-fluid hidden" id="winner">
             <div class="row h-100">
-                <div class="col-sm-12 my-auto">
+                <div class="col-sm-12 my-auto" id="display-winner">
                     <h3 id="game-winner">You Won!</h3>
                     <button type="submit" id="play-again" class="btn btn-primary mb-2">Play Again?</button>
                     <button type="submit" id="exit" class="btn btn-primary mb-2">Exit</button>
