--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
         </div>
 
         <div class="container-fluid hidden" id="winner">
-            <div class="row h-100">
+            <div class="row">
                 <div class="col-sm-12 my-auto" id="display-winner">
                     <h3 id="game-winner">You Won!</h3>
                     <button type="submit" id="play-again" class="btn btn-primary mb-2">Play Again?</button>
-                    <button type="submit" id="exit" class="btn btn-primary mb-2">Exit</button>
+                    <button type="submit" id="exit" class="btn btn-secondary mb-2">Exit</button>
                 </div>
             </div>
         </div>
