--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="container-fluid hidden" id="winner">
             <div class="row">
                 <div class="col-sm-12 my-auto" id="display-winner">
-                    <h3 id="game-winner">You Won!</h3>
+                    <h3 id="game-winner"></h3>
                     <button type="submit" id="play-again" class="btn btn-primary mb-2">Play Again?</button>
                     <button type="submit" id="exit" class="btn btn-secondary mb-2">Exit</button>
                 </div>
@@ -195,21 +195,21 @@
                     <div class="row align-items-center justify-content-center maintain-height">
                         <div class="col" id="computer-container">
                         </div>
-                        <div class="col-2">
+                        <div class="col-3" id="opponent-display">
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center maintain-height" id="board">
-                        <div class="col-3" id="played-container">
+                        <div class="col-4" id="played-container">
                         </div>
-                        <div class="col-7" id="board-container">       
+                        <div class="col-5" id="board-container">       
                         </div>
-                        <div class="col-2" id="deck-container">
+                        <div class="col-3" id="deck-container">
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center maintain-height">
                         <div class="col" id="user-container">
                         </div>
-                        <div class="col-2" id="instruction-display">
+                        <div class="col-3" id="instruction-display">
                         </div>
                     </div>
                 </div>
