--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
         </div>
 
         <div class="container-fluid hidden h-100" id="main-game">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" id="main-board">
                 <div class="col-8">
                     <div class="row align-items-center justify-content-center maintain-height">
                         <div class="col" id="computer-container">
                         </div>
-                        <div class="col-3" id="opponent-display">
+                        <div class="col-3" id="current-player-display">
                         </div>
                     </div>
                     <div class="row align-items-center justify-content-center maintain-height" id="board">
