Fixed button styling

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="container-fluid" id="welcome">
             <div class="row h-100 hidden" id="welcome-div">
                 <div class="col-sm-12 my-auto animated fadeInUp">
-                    <h3>Please enter you name</h3>
+                    <h3>Please enter your name</h3>
                     <form id='form'>
                         <div class="form-row align-items-center">
                           <div class="col-auto">
@@ -179,8 +179,8 @@
              </div>     
         </div>
 
-        <div class="container-fluid hidden" id="winner">
-            <div class="row">
+        <div class="container-fluid h-100 hidden" id="winner">
+            <div class="row" id="winner-row">
                 <div class="col-sm-12 my-auto" id="display-winner">
                     <h3 id="game-winner"></h3>
                     <button type="submit" id="play-again" class="btn btn-primary mb-2">Play Again?</button>
